[package]
name = "horizonfetch"
version = "0.3.5-2"
edition = "2021"

[target.x86_64-pc-windows-msvc]
rustflags = ["-Ctarget-feature=+crt-static"]

[profile.release]
strip = "symbols"
lto = true
debug = false
panic = "abort"

[dependencies]
crossterm = "0.29.0"
winapi = { version = "0.3", features = ["sysinfoapi", "winbase", "minwindef"] }
systemstat = "0.2.4"
wmi = "0.12"
windows = { version = "0.61.1", features = ["Win32_Graphics_Dxgi", "Win32_Graphics_Direct3D11", "Win32_Graphics_Direct3D", "Win32_Graphics_Gdi", "Win32_System", "Win32_System_SystemInformation", "Win32_System_Diagnostics", "Win32_System_Diagnostics_Debug", "Win32_Security", "Win32_Security_Credentials", "Win32_System_SystemServices", "Win32_System_Registry", "Win32_Security_Authentication", "Win32_Security_Authentication_Identity", "Win32_System_WindowsProgramming", "Win32_System_Registry", "Win32_Foundation", "Win32_System_Memory", "Win32_Storage", "Win32_Storage_FileSystem", "Win32_System_Threading", "Win32_System_ProcessStatus", "Win32_System_Diagnostics_ToolHelp", "Win32_System_Wmi", "Win32_System_Com", "Win32_System_Ole", "Win32_Globalization" ] }
serde = { version = "1.0", features = ["derive"] }
winreg = "0.52"
once_cell = "1.15.0"
strip-ansi-escapes = "0.2.1"

[build-dependencies]
winres = "0.1"
